# qualitool

./: .gitignore  Cargo.toml  README.md  commitlint.config.js  justfile  pnpm-lock.yaml  progress.txt  ralph.sh  skills-lock.json  test-commit-msg-hook.sh  test-commitlint.sh
.claude/skills/ask-system-architect/: SKILL.md
.github/: pull_request_template.md
crates/qualitool-agent/: Cargo.toml
crates/qualitool-checks/: Cargo.toml
crates/qualitool-cli/: Cargo.toml
crates/qualitool-cli/src/: main.rs
crates/qualitool-core/: Cargo.toml
crates/qualitool-core/src/: agent.rs  check.rs  lib.rs  probe.rs  scheduler.rs
crates/qualitool-probes/: Cargo.toml
crates/qualitool-protocol/: Cargo.toml
crates/qualitool-protocol/schema/: qualitool.schema.json
crates/qualitool-protocol/src/: agent.rs  check.rs  finding.rs  jsonrpc.rs  lib.rs  manifest.rs  schema.rs
crates/qualitool-sdk/: Cargo.toml
docs/: PR_TEMPLATE.md
docs/architecture/: OVERVIEW.md
docs/architecture/adrs/: 0001-core-and-frontends-single-binary.md  0002-monorepo-cargo-pnpm-just.md  0003-probe-check-preset-terminology.md  0004-extension-boundary-subprocess-jsonrpc.md  0005-dag-parallel-scheduler.md  0006-layered-configuration-model.md  0007-cache-per-user-content-hashed.md  0008-explicit-project-identity.md  0009-findings-envelope-typed-payload.md  0010-ai-checks-bring-your-own-agent.md
