[package]
name = "qualitool-checks"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
qualitool-core = { path = "../qualitool-core" }
qualitool-protocol = { path = "../qualitool-protocol" }
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
