[package]
name = "qualitool-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
qualitool-protocol = { path = "../qualitool-protocol" }
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
