[package]
name = "qualitool-protocol"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true

[[bin]]
name = "generate-schema"
path = "src/bin/generate_schema.rs"

[dev-dependencies]
serde_json.workspace = true
